# review_testcase_skills

./: .gitignore  API_GUIDE.md  CLAUDE.md  MEMORY.md  README.md
.claude-plugin/: marketplace.json
.claude-plugin /: marketplace.json
docs/: block_format_experiment.md  post_review_test_implementation.md  review_checklist.md
langfuse/: .env.example  .gitignore  README.md  pyproject.toml
langfuse/datasets/: edit_testcase_node_dataset.py  post_node_dataset.py  pre_node_dataset.py  review_node_dataset.py
langfuse/prompts/: edit_testcase_prompt.py  post_review_prompt.py  review_prompt.py
langfuse/schemas/: edit_testcase_node_expected_output_schema.json  edit_testcase_node_input_schema.json  expected_output_schema.json  input_schema.json  post_node_input_schema.json  post_review_dataset_output_schema.json  pre_node_expected_output_schema.json  pre_node_input_schema.json  review_node_expected_output_schema.json  review_node_input_schema.json  test_cases.json
langfuse/scripts/: run_experiment.py
langfuse/tests/: README.md  conftest.py  test_post_review.py  test_pre_node.py
langfuse/utils/: __init__.py  client.py  config.py  datasets.py  evaluators.py  experiments.py  post_review.py  prompts.py  sync.py
prompts/: comment.md  edit_testcase.md  post_review.md  review.md  review_prod.md  system.md
scripts/: download_prompts.py  download_skills.py  submit_review.py  upload_prompts.py  upload_skills.py
skills/edit-attachments/: SKILL.md
skills/edit-description/: SKILL.md
skills/edit-links/: SKILL.md
skills/edit-members/: SKILL.md
(+25 files in other folders)
